[package]
name = "sgproxy"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
base64 = "0.22"
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }
getrandom_04 = { package = "getrandom", version = "0.4", features = ["wasm_js"] }
js-sys = "0.3"
rand = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
time = { version = "0.3", features = ["parsing", "formatting"] }
url = "2"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Headers", "ReadableStream", "Request", "RequestInit", "Response"] }
worker = "0.7.5"
